--- a/src/views/partials/form.hbs
+++ b/src/views/partials/form.hbs
@@ -12,5 +12,7 @@
         <option value="Atom">Atom</option>
         <option value="Sublime">Sublime</option>
     </select>
+    <label for='comment'>Comment</label>
+    <input type="text" name="comment" id='comment'>
     <button type='submit'>Submit</button>
 </form>
