Fix handlebars rendering for get route

--- a/src/views/partials/podium.hbs
+++ b/src/views/partials/podium.hbs
@@ -1,4 +1,5 @@
 <section class="podium-container">
+  {{userDetails}}
     <div class="first">First:</div>
     <div class="second">Second:</div>
     <div class="third">Third:</div>
