--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,4 +1,22 @@
 <section class="main-container">
     <h1 class="main-title">EDITOR WARS</h1>
-    
+
+</section>
+
+<!-- <section class="podium-container">
+  <h3>Hi There</h3>
+    <div class="first">First:{{this.first_name}}</div>
+    <div class="second">Second:{{id}}</div>
+    <div class="third">Third:{{this.fac_cohort}}</div>
+</section> -->
+
+
+<section class="podium-container">
+  <h3>Hi</h3>
+  {{#each userDetails}}
+  <p>{{this.first_name}}</p>
+  {{/each}}
+    <div class="first">First:</div>
+    <div class="second">Second:</div>
+    <div class="third">Third:</div>
 </section>
