--- a/src/views/partials/podium.hbs
+++ b/src/views/partials/podium.hbs
@@ -1,6 +1,7 @@
-<section class="podium-container">
-  {{userDetails}}
-    <div class="first">First:</div>
+<!-- <section class="podium-container">
+  <p>{{#each userDetails}}</p>
+    <div class="first">First:{{this.id}}</div>
     <div class="second">Second:</div>
     <div class="third">Third:</div>
-</section>
+    {{/each}}
+</section> -->
